# iff-rag

./: .gitignore  README.md  langchain_rag.py  llama_index_rag.py  pyproject.toml  rag.ipynb
example_data/: 1.architecture.md  2.admin.md  3.devs.md  4.routines.md  5.requirements.md
