[tool.poetry]
name = "iff-haystag-rag"
version = "0.1.0"
description = ""
authors = ["jhnoor <jamawadi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
haystack-ai = "^2.9.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.3.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
